[metadata]
name = resource_checker
version = attr: resource_checker.__version__
author = Alexander Belyaev
author_email = aka.bwhite@gmail.com
description = Tool to check if URL leads to deliverable resource
long_description = file: README.md

[options]
packages = find:
include_package_data = true
python_requires = >= 3.7
install_requires =
    aiohttp
    requests

[options.extras_require]
test =
    pytest
    responses

[tool:pytest]
testpaths = tests
